--- a/client/src/bewoners/index.html
+++ b/client/src/bewoners/index.html
@@ -47,101 +47,42 @@
                 <section class="banner">
                     <div>
                         <h1>Welkom</h1>
-                        <h2>Bij onze zorgzame buurt</h2>
+                        <h2>Maak nu een account en voeg je toe aan onze buurt </h2>
+                        <a class="button">Klik hier om je in te loggen</a>
                     </div>
                 </section>
 
-                <section class="activiteiten">
-                    <h2>Activiteiten:</h2>
+                <section class="bewoners">
+                    <h2 class="hidden">Leer ons kennen</h2>
                     <ul>
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Lopen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-                    </ul>
-                    <a href="">Zie meer</a>
-                </section>
-
-                <section>
-                    <h2>Leer ons kennen</h2>
-                    <ul>
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
+                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
                         </li>
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
+                            <img src="https://picsum.photos/100/100" alt="Profielfoto">
                         </li>
                     </ul>
                 </section>
