--- a/client/src/index.html
+++ b/client/src/index.html
@@ -19,7 +19,7 @@
             rel="stylesheet"
         />
         <script type="module" src="js/main.js"></script>
-        <title>Neighbourhoods</title>
+        <title>Home</title>
 
     </head>
     <body>
@@ -88,27 +88,27 @@
                             <img src="https://picsum.photos/100/100" alt="Profielfoto">
                         </li>
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
                             <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li>
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
                             <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li>
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
                             <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li>
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
                             <img src="https://picsum.photos/100/100" alt="Profielfoto">
-                        </li>
+                        </li >
 
-                        <li>
+                        <li class="profilepicture">
                             <h3>Tom</h3>
                             <img src="https://picsum.photos/100/100" alt="Profielfoto">
                         </li>
