--- a/client/src/profiel/index.html
+++ b/client/src/profiel/index.html
@@ -37,114 +37,132 @@
                             <li><a href="../">Home</a></li>
                             <li><a href="../activiteiten/">Activiteiten</a></li>
                             <li><a href="../bewoners/">Bewoners</a></li>
-                            <li><a class="active" href="../profiel/">Profiel</a></li>
+                            <li>
+                                <a class="active" href="../profiel/">Profiel</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
             </header>
 
             <main>
-                <section class="banner">
-                    <div>
-                        <h1>Welkom</h1>
-                        <h2>Bij onze zorgzame buurt</h2>
+                <form action="" id="profiel">
+                    <h1 class="hidden">Profiel</h1>
+                    <div
+                        class="errorSummary"
+                        role="group"
+                        aria-labelledby="errorSummary-heading"
+                        tabindex="-1"
+                    >
+                        <h2 id="errorSummary-heading">Er is een probleem</h2>
+                        <ul></ul>
                     </div>
-                </section>
-
-                <section class="activiteiten">
-                    <h2>Activiteiten:</h2>
-                    <ul>
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Lopen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-                    </ul>
-                    <a href="">Zie meer</a>
-                </section>
-
-                <section>
-                    <h2>Leer ons kennen</h2>
-                    <ul>
-                        <li>
-                            <h3>Tom</h3>
+                    <div class="profielfoto">
+                        <label for="profielfoto" class="button">change picture</label>
+                        <input
+                            type="file"
+                            id="profielfoto"
+                            name="profielfoto"
+                            accept="image/png, image/jpeg"
+                            class="hidden"
+                        />
+                        <figure>
                             <img
                                 src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
+                                alt="profielfoto"
                             />
-                        </li>
+                        </figure>
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="naam">
+                            <span class="field-label">Naam:</span>
+                        </label>
+                        <input
+                            type="text"
+                            name="naam"
+                            id="naam"
+                            autocomplete="name"
+                            required
+                            autofocus
+                            tabindex="0"
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="email">
+                            <span class="field-label">Email:</span>
+                        </label>
+                        <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            autocomplete="email"
+                            required
+                            autofocus
+                            tabindex="0"
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <div>
+                        <label for="telefoonnummer">
+                            <span class="field-label">telefoonnummer:</span>
+                        </label>
+                        <input
+                            type="tel"
+                            name="naam"
+                            id="naam"
+                            autocomplete="name"
+                            required
+                            autofocus
+                            tabindex="0"
+                        />
+                    </div>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
+                    <fieldset class="wachtwoord">
+                        <legend>
+                            <span class="field-label">wachtwoord</span>
+                        </legend>
 
-                        <li>
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-                    </ul>
-                </section>
+                        <label for="huidigWachtwoord">
+                            <span class="field-label">Huidig wachtwoord:</span>
+                        </label>
+                        <input
+                            type="password"
+                            name="huidigWachtwoord"
+                            id="huidigWachtwoord"
+                            autocomplete="current-password"
+                            required
+                            autofocus
+                            tabindex="0"
+                        />
+
+                        <label for="NieuwWachtwoord">
+                            <span class="field-label">Nieuw wachtwoord:</span>
+
+                            <span class="field-hint">
+                                <p>Een wachtwoord moet minstens bevatten:</p>
+                                <ul>
+                                    <li>7 karakters</li>
+                                    <li>1 cijfer</li>
+                                </ul>
+                            </span>
+                        </label>
+                        <input
+                            type="password"
+                            name="NieuwWachtwoord"
+                            id="NieuwWachtwoord"
+                            autocomplete="new-password"
+                            required
+                            autofocus
+                            tabindex="0"
+                        />
+                    </fieldset>
+
+                    <div>
+                        <button class="button" type="submit">Sla veranderingen op</button>
+                    </div>
+                </form>
             </main>
 
             <footer>
